fix stock-dash footer fixed (not good on small screens

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -101,7 +101,6 @@ footer p {
 }
 
 .stock-dash-footer{
-    position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -703,7 +702,7 @@ footer p {
 
 /*************************************** Stock-Dash *********************/
 .stock-dash-container{
-    margin-bottom: 80px;
+    margin-bottom: 70px;
 }
 
 .chart-container{
